k8s/apps/apprise/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise
  namespace: notification
  labels:
    app.kubernetes.io/name: apprise
  annotations:
    configmap.reloader.stakater.com/reload: apprise-config
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: apprise
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apprise
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 100000
      containers:
        - name: apprise
          image: caronc/apprise:2.0.1@sha256:0b2913b15c8eb47c25345722985ffbfae701326edde21909c205d296d62dd52c
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: /config
            - name: apprise-config
              mountPath: /config/flux.yml
              subPath: flux.yml
            - name: apprise-config
              mountPath: /config/servarr.yml
              subPath: servarr.yml
            - name: attach
              mountPath: /attach
            - name: plugin
              mountPath: /plugin
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: apprise-config
        - name: apprise-config
          configMap:
            name: apprise-config
        - name: attach
          emptyDir: {}
        - name: plugin
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: apprise
  namespace: notification
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: apprise
  ports:
    - port: 8000
      targetPort: 8000
      name: http
