k8s/apps/apprise/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apprise
  namespace: notification
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Apprise"
    gethomepage.dev/description: "Cluster notification gateway"
    gethomepage.dev/group: "infrastructure"
    gethomepage.dev/icon: "apprise.png"
    gethomepage.dev/href: "https://apprise.item.fyi"
    gethomepage.dev/siteMonitor: "http://apprise.notification.svc.cluster.local:8000"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=apprise"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`apprise.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: apprise
          port: 8000
  tls: {}
